# final_project_cfds

./: README.md  main.py  pyproject.toml  run_pipeline.py  run_tuning.py  scalability.md
app/: app.py
app/routers/: predict_router.py
app/schemas/: predict_schema.py
app/services/: predict_service.py
frontend/: app.js  docs.html  index.html  styles.css
modeling_old/: modeling.py  predict.py
notebook/: notebook.ipynb
src/best_library/: __init__.py
src/best_library/data/: load_data.py
src/best_library/evaluation/: evaluate.py
src/best_library/features/: __init__.py  feature_engineering.py
src/best_library/hyperparameter_tuning/: __init__.py  tuner.py
src/best_library/model/: __init__.py  model_definition.py  model_resnet18.py  predict.py  train.py
src/best_library/preprocessing/: preprocessing.py
src/best_library/split/: __init__.py  split_train_test.py
src/final_project_cfds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: feature.py  preprocess.py  test_features.py  test_preprocess.py  test_validation.py
